scss/layout/_mobile.scss
@media only screen and (min-device-width: 320px) and (max-device-width: 480px){
	html{
		font-size: 140%;
	}

	.content-skills-section{
		min-width: 100vw;
		width: 100vw;
	}

	.content-project-description{
		min-width: 90vw;
		width: 90vw;

		& .content-skills-section{
			min-width: 100%;
			width: 100%;
		}

		&:nth-child(2){
			order: 3;
		}

		&:nth-child(3){
			order: 4;
		}
	}

	.content-project-image-container{
		&:nth-child(1){
			order: 1;
		}
		&:nth-child(4){
			order: 2;
		}
	}

	.content-page#Footer{
		font-size: 0.9em;

		& .content-wrapper{
			& .content-footer-item{
				&:first-child{
					margin-left: 5px;
				}

				&:last-child{
					margin-right: 5px;
				}
			}
		}
	}
}

